<resources>
    <string name="app_name">Weather Forcast</string>
    <string name="search_by_city_hint_value">Search by city</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="celciousWithSymbol">-- °C</string>
    <string name="get_weather">Get weather</string>
    <string name="hardcoded_text">Mumbai</string>
    <string name="humidity">Humidity</string>
    <string name="preassure">Preassure</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="unable_to_get_any_info_error_message">Unable to get any info</string>
    <string name="retroifit_error_message">Error, Please try again after some time</string>
</resources>
